# SRPP

./: README.md  franka.sh
SRPP/: CMakeLists.txt  package.xml
SRPP/scripts/: baselinepretraining.py  progress.txt  project_header.py  sac.py  srpp.py  test_policy.py
SRPP/scripts/data/sac/sac_s0/: config.json
SRPP/scripts/utils/: logx.py
SRPP/scripts_origin/: CircleTrajectory.py  baseline2.py  baseline3.py  core.py  gazebo_env.py  gazebo_env_torque.py  gazebo_env_trajectory.py  srpp.py  test_policy.py
SRPP/scripts_origin/data/sac/sac_s0/: config.json  vars.pkl
SRPP/scripts_origin/data/sac/sac_s0/pyt_save/: model.pt
SRPP/scripts_origin/data_CircleTJ_40RT/data/sac/sac_s0/: config.json  progress.txt  vars.pkl
SRPP/scripts_origin/data_CircleTJ_40RT/data/sac/sac_s0/pyt_save/: model.pt
SRPP/scripts_origin/utils/: plot.py
SRPP/scripts_origin/wyh_jointAngleLIne30RT_baseline3/data/sac/sac_s0/: progress.txt  vars.pkl
SRPP/scripts_origin/wyh_jointAngleLIne30RT_baseline3/data/sac/sac_s0/pyt_save/: model.pt
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/SRPP/: .catkin  setup.sh
logs/SRPP/: build.check.000.log.stderr  build.cmake.000.log.stderr
logs/lab2pkg_py/: build.cmake.000.log.stderr
scripts/: CircleTrajectory.py  Joint_circle_trajectory.py  Test.py  Torque_Circle.py  Torque_Circle_ref.py  Torque_ref_comp1.py  TrajectoryTestEnv.py  baseline3.py  baseline4.py  srpp.py  srpp_joint_control.py  srpp_torque_control.py  srpp_torque_control_test.py  test_inversekinematics.py  trajectory_generator.py
src/: .rosinstall  .rosinstall.bak
(+916 files in other folders)
